--- a/responsive.css
+++ b/responsive.css
@@ -11,28 +11,31 @@
         grid-template-columns: 1fr;
     }
 
-
     /*navbar section start*/
 
 .navbar-container{
-    padding: 0px 30px;
+    padding: 0px 40px;
 }
 
-a{
-    text-decoration: none;
+.navbar-container-nav{
+    display: block;
 }
+
 .navbar ul{
-    display: flex;
-    list-style-type: none;
- }   
-.navbar ul li a {
-    padding: 0px 0px;
-    font-size: 12px;
-    color: #898989;
-    font-weight: 500;
-    background: #ffffff;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
+    display:none;
+    flex-direction: column;
+    text-align: left;
+    position: relative;
+    top: 20px;
+    left: 40px;
+}
+
+#control:checked~ul{
+    display: block;
+}
+
+.control{
+    display: block;
 }
 
 /* navbar section end*/
