--- a/style.css
+++ b/style.css
@@ -20,7 +20,12 @@ a{
 .navbar ul{
     display: flex;
     list-style-type: none;
- }   
+ }
+ 
+.navbar .mobile{
+     display: none;
+     flex-direction: column-reverse;
+ }
 .navbar ul li a {
     padding: 0px 25px;
     font-size: 12px;
@@ -35,6 +40,22 @@ a{
     color: #292929;
     box-shadow: inset 0 -8px 0 #fdd912;
 	transition: all 0.4s ease 0s;
+}
+
+#control{
+    display: none;
+}
+
+.control{
+    display: none;
+    cursor: pointer;
+    padding-top: 14px;
+}
+
+.bars{
+    font-size: 20px;
+    color: black;
+    float: right;
 }
 
 
