--- a/responsive.css
+++ b/responsive.css
@@ -17,21 +17,34 @@
     padding: 0px 40px;
 }
 
-.navbar-container-nav{
-    display: block;
+
+.navbar ul li a{
+    font-size: 13px;
+    line-height: 50px;
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
 
-.navbar ul{
-    display:none;
+
+ul{
+    position: fixed;
+    z-index: 9;
+    left: 100%;
+    right: 0;
+    top: 70px;
+    bottom: 50%;
+    overflow: hidden;
     flex-direction: column;
-    text-align: center;
-    position: relative;
-    top: 20px;
-    left: 40px;
+    background-color: #ffffff;
+    transition: all 0.5s ease;
 }
+
 
 #control:checked~ul{
-    display: block;
+    left: 0;
+}
+
+#control:checked~.control i::before{
+    content: "\x";
 }
 
 .control{
@@ -157,21 +170,33 @@
     padding: 0px 40px;
 }
 
-.navbar-container-nav{
-    display: block;
+.navbar ul li a{
+    font-size: 13px;
+    line-height: 50px;
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
 
-.navbar ul{
-    display:none;
+
+ul{
+    position: fixed;
+    z-index: 9;
+    left: 100%;
+    right: 0;
+    top: 70px;
+    bottom: 50%;
+    overflow: hidden;
     flex-direction: column;
-    text-align: center;
-    position: relative;
-    top: 20px;
-    left: 40px;
+    background-color: #ffffff;
+    transition: all 0.5s ease;
 }
+
 
 #control:checked~ul{
-    display: block;
+    left: 0;
+}
+
+#control:checked~.control i::before{
+    content: "\x";
 }
 
 .control{
